<resources>
    <string name="app_name">ZivameApplication</string>
    <string name="gadgets">GADGETS</string>
    <string name="cart">CART</string>
    <string name="checkout">Checkout</string>
    <string name="loading">Loading..</string>
    <string name="congratulations">Congratulations</string>
    <string name="orderPlace">Your Order has been Placed.</string>
    <string name="continueShop">Continue Shopping</string>
    <string name="noData">No data found</string>
    <string name="default_error">Oops! Some thing went wrong</string>
    <string name="imageUrl">Image</string>
    <string name="star">Star</string>
    <string name="addToCart">Add to Cart</string>
    <string name="added">Added</string>
</resources>