<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="loginViewModel"
            type="com.app.zivameapplication.viewmodel.CartViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/ivDone"
                android:src="@drawable/check"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/loading" />

            <TextView
                android:id="@+id/tvCongratulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivDone"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:text="@string/congratulations"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCongratulation"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:fontFamily="monospace"
                android:text="@string/orderPlace"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="monospace"
            android:text="@string/continueShop"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>
</layout>
