<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlHeading"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="monospace"
            android:text="@string/gadgets"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/ivCart"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cart"
                android:scaleType="fitCenter"
                android:src="@drawable/cart" />

            <RelativeLayout
                android:id="@+id/rlBadge"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/circle"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="monospace"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="60dp"
        android:background="@color/black" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/mShimmerViewContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlHeading"
        android:layout_gravity="center"
        android:orientation="vertical"
        shimmer:duration="800">

        <!-- Adding 3 rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/placeholder_image" />

            <include layout="@layout/placeholder_image" />

            <include layout="@layout/placeholder_image" />

            <include layout="@layout/placeholder_image" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlHeading">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvEmptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="monospace"
            android:text="@string/noData"
            android:textSize="12sp"
            android:visibility="gone" />

    </RelativeLayout>
</RelativeLayout>
