<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginViewModel"
            type="com.app.zivameapplication.viewmodel.CartViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rlHeading"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/ivBack"
                android:contentDescription="@string/cart"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/back"
                android:layout_width="20dp"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="monospace"
                android:text="@string/cart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>
        <View
            android:background="@color/black"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_below="@id/rlHeading"
            android:id="@+id/mShimmerViewContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            shimmer:duration="800">

            <!-- Adding 3 rows of placeholders -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/placeholder_image" />
                <include layout="@layout/placeholder_image" />
                <include layout="@layout/placeholder_image" />
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>
        <RelativeLayout
            android:layout_below="@id/rlHeading"
            android:layout_above="@id/btnCheckOut"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvEmptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="monospace"
                android:text="@string/noData"
                android:textSize="12sp"
                android:visibility="gone" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnCheckOut"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="monospace"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>
</layout>
