<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imageUrl"
        android:scaleType="fitCenter" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/ivProduct">

        <TextView
            android:id="@+id/tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="monospace"
            android:maxWidth="200dp"
            android:text="@string/imageUrl"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvname"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/imageUrl"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvprice"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivfirstStar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/star"
                android:scaleType="fitCenter"
                android:src="@drawable/empty_star" />

            <ImageView
                android:id="@+id/ivSecondStar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/star"
                android:scaleType="fitCenter"
                android:src="@drawable/empty_star" />

            <ImageView
                android:id="@+id/ivThirdStar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/star"
                android:scaleType="fitCenter"
                android:src="@drawable/empty_star" />

            <ImageView
                android:id="@+id/ivfourthStar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/star"
                android:scaleType="fitCenter"
                android:src="@drawable/empty_star" />

            <ImageView
                android:id="@+id/ivfifthStar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/star"
                android:scaleType="fitCenter"
                android:src="@drawable/empty_star" />

            <TextView
                android:id="@+id/tvrating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="monospace"
                android:text="@string/imageUrl"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/rounded_button"
            android:fontFamily="monospace"
            android:text="@string/addToCart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </RelativeLayout>

</RelativeLayout>